--- a/Class Management/Views/Tools.xaml
+++ b/Class Management/Views/Tools.xaml
@@ -71,5 +71,29 @@
         <Grid Background="Beige">
             <!-- Here i mean -->
         </Grid>
+
+        <TreeView Style="{StaticResource MetroTreeView}">
+            <TreeViewItem Header="Level 1"></TreeViewItem>
+            <TreeViewItem Header="Level 1">
+                <TreeViewItem Header="Level 2"></TreeViewItem>
+                <TreeViewItem Header="Level 2"></TreeViewItem>
+            </TreeViewItem>
+            <TreeViewItem Header="Level 1">
+                <TreeViewItem Header="Level 2">
+                    <TreeViewItem Header="Level 3"></TreeViewItem>
+                    <TreeViewItem Header="Level 3"></TreeViewItem>
+                </TreeViewItem>
+                <TreeViewItem Header="Level 2"></TreeViewItem>
+            </TreeViewItem>
+            <TreeViewItem Header="Level 1">
+                <TreeViewItem Header="Level 2">
+                    <TreeViewItem Header="Level 3">
+                        <TreeViewItem Header="Level 4">
+                            <TreeViewItem Header="Level 5"></TreeViewItem>
+                        </TreeViewItem>
+                    </TreeViewItem>
+                </TreeViewItem>
+            </TreeViewItem>
+        </TreeView>
     </StackPanel>
 </UserControl>
